<resources>
    <string name="app_name">KoinDependencyInjection</string>
    <string name="class_dependency_injection">Class Dependency Injection</string>
    <string name="interface_dependency_injection">Interface Dependency Injection</string>
    <string name="bind_amp_binds_example"><![CDATA[Bind & Binds example]]></string>
    <string name="viewmodel">ViewModel</string>
    <string name="retrofit">Retrofit</string>
    <string name="room">Room</string>
    <string name="scopes">Scopes</string>
    <string name="qualifiers">Qualifiers</string>
    <string name="end_trip">End Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="base_url_one">Base Url One</string>
    <string name="base_url_two">Base Url Two</string>
    <string name="bind_one_interface">Bind One Interface</string>
    <string name="binds_two_interface">Binds Two Interface</string>
</resources>